registration bug fixes